--- a/src/kits/CMakeLists.txt
+++ b/src/kits/CMakeLists.txt
@@ -9,6 +9,7 @@ AddOn(
 
 UsePrivateHeaders(be app interface kernel print shared locale libroot shared system)
 
+target_compile_options(be PRIVATE -std=c++17)
 
 AddOn(
 	be_bootstrap
