--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,86 +1,60 @@
-name: C/C++ CI
+
+name: Build Vitruvian ISO
 
 on: [push]
 
 jobs:
-  build:
-
+  iso-build:
     runs-on: ubuntu-latest
-    container: debian:trixie
 
     steps:
-    - uses: actions/checkout@v1
-    - name: update
-      run: apt update
-    - name: deps
-      run: |
-        apt install -y \
-          bison \
-          build-essential \
-          cmake \
-          debootstrap \
-          debhelper \
-          dh-dkms \
-          dkms \
-          elfutils \
-          flex \
-          git \
-          grub-efi-amd64-bin \
-          grub-pc-bin \
-          libdrm-dev \
-          libelf-dev \
-          libfl-dev \
-          libfreetype6-dev \
-          libgif-dev \
-          libicns-dev \
-          libicu-dev \
-          libinput-dev \
-          libjpeg-dev \
-          libncurses-dev \
-          libopenexr-dev \
-          libpng-dev \
-          libtiff-dev \
-          libudev-dev \
-          libwebp-dev \
-          linux-headers-amd64 \
-          mtools \
-          ninja-build \
-          squashfs-tools \
-          sudo \
-          xorriso \
-          zlib1g-dev \
-          --fix-missing
-    - name: fix kernel headers path
-      run: |
-        HOST_KERNEL=$(uname -r)
-        HEADER_DIR=$(ls -d /usr/src/linux-headers-* | head -n1)
-        mkdir -p /lib/modules/$HOST_KERNEL
-        ln -s $HEADER_DIR /lib/modules/$HOST_KERNEL/build
-    - name: mkdir
-      run: mkdir generated.x86
-    - name: directory exception
-      run: cd generated.x86 && git config --global --add safe.directory /__w/Vitruvian/Vitruvian
-    - name: sumodule update
-      run: git submodule update --init --recursive
-    - name: setup environment
-      run: cd generated.x86 && export TERM=xterm-256color && ../build/scripts/setupenv.sh
-    - name: list nexus directory
-      run: ls -la /__w/Vitruvian/Vitruvian/src/system/kernel/nexus
-    - name: configure generated.x86
-      run: cd generated.x86 && ../configure
-    - name: ninja build
-      run: cd generated.x86 && ninja
-    - name: generate deb 
-      run: cd generated.x86 && cpack
-    - name: prepare fake mounts
-      run: |
-        CHROOT=generated.x86/LIVE_BOOT/chroot
-        sudo mkdir -p $CHROOT/{proc,sys,dev,run,tmp}
-        # finti mount point (symlink a /dev/null o directory vuote)
-        sudo touch $CHROOT/proc/fake
-        sudo touch $CHROOT/sys/fake
-        sudo touch $CHROOT/dev/fake
-        sudo touch $CHROOT/run/fake
-        sudo touch $CHROOT/tmp/fake
-    - name: generate ISO
-      run: cd generated.x86 && export TERM=xterm-256color && ../build/scripts/mkiso.sh || true
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            bison build-essential cmake debootstrap debhelper \
+            dh-dkms dkms elfutils flex git \
+            grub-efi-amd64-bin grub-pc-bin \
+            libdrm-dev libelf-dev libfl-dev libfreetype6-dev \
+            libgif-dev libicns-dev libicu-dev libinput-dev \
+            libjpeg-dev libncurses-dev libopenexr-dev libpng-dev \
+            libtiff-dev libudev-dev libwebp-dev \
+            linux-headers-$(uname -r) \
+            mtools ninja-build squashfs-tools sudo xorriso zlib1g-dev \
+            fakeroot devscripts lintian wget
+
+      - name: Configure git safe.directory
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
+
+      - name: Create build directory
+        run: mkdir generated.x86
+
+      - name: Init submodules
+        run: git submodule update --init --recursive
+
+      - name: Setup environment
+        run: cd generated.x86 && export TERM=xterm-256color && ../build/scripts/setupenv.sh
+
+      - name: Configure
+        run: cd generated.x86 && ../configure
+
+      - name: Ninja build
+        run: cd generated.x86 && ninja
+
+      - name: Generate deb packages
+        run: cd generated.x86 && cpack
+
+      - name: Make mkiso script executable
+        run: chmod +x ./build/scripts/mkiso.sh
+
+      - name: Run mkiso script
+        run: cd generated.x86 && ../build/scripts/mkiso.sh
+
+      - name: Upload Vitruvian ISO
+        uses: actions/upload-artifact@v4
+        with:
+          name: Vitruvian-ISO
+          path: generated.x86/LIVE_BOOT/*.iso
