postinst: Create some basic system directories * Other minor fixes.

--- a/data/systemd/registrar.service
+++ b/data/systemd/registrar.service
@@ -9,6 +9,7 @@ StandardOutput=append:/var/log/registrar.log
 StandardError=append:/var/log/registrar.log
 Restart=no
 RestartSec=500ms
+StartLimitBurst=5
 
 [Install]
 WantedBy=graphical.target
