--- a/src/servers/registrar/CMakeLists.txt
+++ b/src/servers/registrar/CMakeLists.txt
@@ -40,6 +40,7 @@ Server(
 	INCLUDES
 	"mime"
 	LIBS localestub
+	RDEF registrar.rdef
 )
 
 UsePrivateHeaders(registrar app kernel libroot system tracker)
