--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -7,9 +7,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Install all required build dependencies
       - name: Install build dependencies
         run: |
           sudo apt-get update
@@ -25,34 +27,55 @@ jobs:
             mtools ninja-build squashfs-tools sudo xorriso zlib1g-dev \
             fakeroot devscripts lintian wget
 
+      # Mark repository as safe for git operations
       - name: Configure git safe.directory
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
-      - name: Create build directory
-        run: mkdir generated.x86
-
+      # Initialize git submodules recursively
       - name: Init submodules
         run: git submodule update --init --recursive
 
+      # Build buildtools with Ninja
+      - name: Build buildtools
+        run: |
+          mkdir -p buildtools
+          cd buildtools
+          cmake -DBUILDTOOLS_MODE=1 .. -GNinja
+          ninja
+
+      # Create the output build directory
+      - name: Create build directory
+        run: mkdir -p generated.x86
+
+      # Setup build environment variables
       - name: Setup environment
         run: cd generated.x86 && export TERM=xterm-256color && ../build/scripts/setupenv.sh
 
-      - name: Configure
-        run: cd generated.x86 && ../configure
+      # Configure the project with the toolchain
+      - name: Configure project with toolchain
+        run: |
+          cd generated.x86
+          cmake .. \
+            -DCMAKE_TOOLCHAIN_FILE=../build/toolchain/vitruvian_toolchain.cmake \
+            -G Ninja
 
+      # Build the project with Ninja
       - name: Ninja build
         run: cd generated.x86 && ninja
 
+      # Generate DEB packages
       - name: Generate deb packages
         run: cd generated.x86 && cpack
 
+      # Make ISO creation script executable
       - name: Make mkiso script executable
         run: chmod +x ./build/scripts/mkiso.sh
 
+      # Run ISO creation script
       - name: Run mkiso script
         run: cd generated.x86 && ../build/scripts/mkiso.sh
 
-      # Generate checksums for ISO
+      # Generate ISO checksums
       - name: Generate ISO checksum
         run: |
           cd generated.x86/LIVE_BOOT
@@ -60,7 +83,7 @@ jobs:
             sha256sum "$iso" > "$iso.sha256"
           done
 
-      # Upload ISO and checksum
+      # Upload ISO artifacts
       - name: Upload Vitruvian ISO
         uses: actions/upload-artifact@v4
         with:
@@ -69,7 +92,7 @@ jobs:
             generated.x86/LIVE_BOOT/*.iso
             generated.x86/LIVE_BOOT/*.sha256
 
-      # Generate checksums for DEB packages
+      # Generate DEB checksums
       - name: Generate DEB checksums
         run: |
           cd generated.x86
@@ -77,7 +100,7 @@ jobs:
             sha256sum "$deb" > "$deb.sha256"
           done
 
-      # Upload DEB packages and checksums
+      # Upload DEB artifacts
       - name: Upload Vitruvian DEB packages
         uses: actions/upload-artifact@v4
         with:
