--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -7,9 +7,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Install all required build dependencies
       - name: Install build dependencies
         run: |
           sudo apt-get update
@@ -25,34 +27,56 @@ jobs:
             mtools ninja-build squashfs-tools sudo xorriso zlib1g-dev \
             fakeroot devscripts lintian wget
 
+      # Mark GitHub workspace as safe
       - name: Configure git safe.directory
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
-      - name: Create build directory
-        run: mkdir generated.x86
-
+      # Initialize submodules recursively
       - name: Init submodules
         run: git submodule update --init --recursive
 
+      # Build buildtools using Ninja
+      - name: Build buildtools
+        run: |
+          mkdir -p buildtools
+          cd buildtools
+          cmake -DBUILDTOOLS_MODE=1 .. -G Ninja
+          ninja
+          cd ..
+
+      # Create output build directory
+      - name: Create build directory
+        run: mkdir -p generated.x86
+
+      # Setup build environment
       - name: Setup environment
         run: cd generated.x86 && export TERM=xterm-256color && ../build/scripts/setupenv.sh
 
-      - name: Configure
-        run: cd generated.x86 && ../configure
+      # Configure project using the Vitruvian toolchain
+      - name: Configure with toolchain
+        run: |
+          cd generated.x86
+          cmake .. \
+            -DCMAKE_TOOLCHAIN_FILE=../build/toolchain/vitruvian_toolchain.cmake \
+            -G Ninja
 
+      # Build the project using Ninja
       - name: Ninja build
         run: cd generated.x86 && ninja
 
+      # Generate .deb packages
       - name: Generate deb packages
         run: cd generated.x86 && cpack
 
+      # Make ISO script executable
       - name: Make mkiso script executable
         run: chmod +x ./build/scripts/mkiso.sh
 
+      # Run mkiso script to generate ISO
       - name: Run mkiso script
         run: cd generated.x86 && ../build/scripts/mkiso.sh
 
-      # Generate checksums for ISO
+      # Generate checksums for ISO files
       - name: Generate ISO checksum
         run: |
           cd generated.x86/LIVE_BOOT
@@ -60,7 +84,7 @@ jobs:
             sha256sum "$iso" > "$iso.sha256"
           done
 
-      # Upload ISO and checksum
+      # Upload ISO artifacts
       - name: Upload Vitruvian ISO
         uses: actions/upload-artifact@v4
         with:
@@ -77,7 +101,7 @@ jobs:
             sha256sum "$deb" > "$deb.sha256"
           done
 
-      # Upload DEB packages and checksums
+      # Upload DEB packages
       - name: Upload Vitruvian DEB packages
         uses: actions/upload-artifact@v4
         with:
@@ -85,3 +109,4 @@ jobs:
           path: |
             generated.x86/*.deb
             generated.x86/*.sha256
+            
