Add some tests for load_image and area * Some cleanup.

--- a/src/tests/vos/testharness/CMakeLists.txt
+++ b/src/tests/vos/testharness/CMakeLists.txt
@@ -3,11 +3,14 @@ Application(testoskit SOURCES testoskit.cpp)
 Application(testports SOURCES testports.cpp)
 Application(testports2 SOURCES testports2.cpp)
 Application(testsem SOURCES testsem.cpp)
-Application(tessempingpong SOURCES testsempingpong.cpp)
+#Application(testsempingpong SOURCES testsempingpong.cpp)
 Application(testthread SOURCES testthread.cpp)
 Application(testteam SOURCES testteam.cpp)
 Application(testfsinfo SOURCES main.cpp)
 Application(test_team_send_data SOURCES test_team_send_data.cpp)
 Application(set_port_owner SOURCES set_port_owner.cpp)
+Application(test_load_image2 SOURCES test_load_image2.cpp)
+Application(test_load_image SOURCES test_load_image.cpp)
+Application(test_area SOURCES test_area.cpp)
 
 add_subdirectory(port)
