--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -4,7 +4,9 @@ add_subdirectory(servers)
 add_subdirectory(system)
 add_subdirectory(vos)
 
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
 add_definitions(-DNO_ELF_SYMBOL_PATCHING)
+endif()
 
 include_directories("${PROJECT_SOURCE_DIR}/headers/tools/cppunit")
 
