--- a/data/systemd/tracker.service
+++ b/data/systemd/tracker.service
@@ -1,10 +1,10 @@
 [Unit]
 Description=Tracker
 Conflicts=getty@tty1.service
-Wants=graphical.target
-After=graphical.target
+After=deskbar.service
 
 [Service]
+ExecStartPre=/bin/sleep 0.5
 ExecStart=/system/Tracker
 StandardInput=tty-force
 StandardOutput=append:/var/log/tracker.log
