Add missing RDEF entries

--- a/src/add-ons/input_server/devices/keyboard/CMakeLists.txt
+++ b/src/add-ons/input_server/devices/keyboard/CMakeLists.txt
@@ -11,6 +11,8 @@ AddOn(
 	INCLUDES
 	"./"
 	LIBS input_server be shared localestub
+
+	RDEF Keyboard.rdef
 )
 
 UsePrivateHeaders(keyboard input interface system tracker)
