--- a/src/add-ons/translators/exr/CMakeLists.txt
+++ b/src/add-ons/translators/exr/CMakeLists.txt
@@ -11,8 +11,9 @@ Application(
 
 	LIBS be translation translatorutils localestub ${EXR_LIBRARIES}
 
-
 	INCLUDES
 	"../shared"
-${EXR_INCLUDES}
+	${EXR_INCLUDES}
+
+	RDEF EXRTranslator.rdef
 )
