--- a/src/kits/textencoding/CMakeLists.txt
+++ b/src/kits/textencoding/CMakeLists.txt
@@ -7,6 +7,8 @@ AddOn(
 	character_sets.cpp
 	utf8_conversions.cpp
 	LIBS localestub
+
+	RDEF libtextencoding.rdef
 )
 
 UsePrivateHeaders( textencoding textencoding )
