--- a/.github/workflows/rev-tag-notifier.yml
+++ b/.github/workflows/rev-tag-notifier.yml
@@ -1,4 +1,4 @@
-name: Increment rev tag and notify chat
+name: Increment rev tag and notify Telegram
 on:
   push:
     branches:
@@ -7,14 +7,8 @@ on:
 permissions:
   contents: write
 
-env:
-  # URL templates used in message formatting
-  REPO_URL: https://github.com/${{ github.repository }}
-  TAG_URL_PREFIX: https://github.com/${{ github.repository }}/releases/tag
-  COMMIT_URL_PREFIX: https://github.com/${{ github.repository }}/commit
-
 jobs:
-  rev_and_notify:
+  increment-and-notify:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout pushed ref (full)
@@ -27,37 +21,35 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      - name: Find latest rev tag (by name)
-        id: find_latest_by_name
+      - name: Find latest rev tag (by ref sort)
+        id: find_latest
         run: |
-          # Pattern: rev-<number>, sort by semver-ish refname
+          # Pattern: rev-<number>
           latest=$(git tag --list 'rev-*' --sort=-v:refname | head -n1 || true)
           if [ -z "$latest" ]; then
             echo "::set-output name=latest::"
             echo "::set-output name=num::"
           else
             num=${latest#rev-}
-            if echo "$num" | grep -Eq '^[0-9]+$'; then
-              echo "::set-output name=latest::$latest"
-              echo "::set-output name=num::$num"
-            else
-              echo "::set-output name=latest::"
-              echo "::set-output name=num::"
-            fi
+            echo "::set-output name=latest::$latest"
+            echo "::set-output name=num::$num"
           fi
 
       - name: Determine next rev number
         id: next_rev
         run: |
-          latest="${{ steps.find_latest_by_name.outputs.latest }}"
-          num="${{ steps.find_latest_by_name.outputs.num }}"
+          latest="${{ steps.find_latest.outputs.latest }}"
+          num="${{ steps.find_latest.outputs.num }}"
           if [ -z "$latest" ]; then
             next=1
           else
-            next=$((num + 1))
+            if echo "$num" | grep -Eq '^[0-9]+$'; then
+              next=$((num + 1))
+            else
+              next=1
+            fi
           fi
           tag="rev-${next}"
-          echo "Next tag will be: $tag"
           echo "::set-output name=tag::$tag"
           echo "::set-output name=number::$next"
 
@@ -66,15 +58,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           tag="${{ steps.next_rev.outputs.tag }}"
-          sha="${GITHUB_SHA}"
-          echo "Creating tag $tag at $sha"
-          # Annotated tag to carry message/author metadata
-          git tag -a "$tag" -m "Incremented rev to $tag" "$sha"
-          # Push tag using token auth (explicit URL avoids default remote issues)
+          echo "Creating tag $tag at $GITHUB_SHA"
+          git tag "$tag" "$GITHUB_SHA"
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git" "refs/tags/${tag}"
 
-      - name: Find latest rev tag (by creation date)
-        id: latest_by_date
+      - name: Find latest rev tag (by creation date for notification)
+        id: latest_for_notify
         run: |
           # find latest rev-* tag by creation date; leave empty if none
           entry=$(git for-each-ref --sort=-creatordate --format='%(refname:short) %(creatordate:unix)' refs/tags | grep '^rev-[0-9]\+' | head -n1 || true)
@@ -88,61 +77,19 @@ jobs:
             echo "::set-output name=ts::$ts"
           fi
 
-      - name: Build Telegram message (HTML)
+      - name: Build Telegram message
         id: message
         run: |
           repo="${GITHUB_REPOSITORY}"
-          repo_url="${REPO_URL}"
           branch="${GITHUB_REF#refs/heads/}"
           sha_full="${GITHUB_SHA}"
-          sha_short="${sha_full::7}"
+          sha="${sha_full::7}"
           author="$(git --no-pager show -s --format='%an' $GITHUB_SHA || echo '')"
-          commit_msg="$(git --no-pager show -s --format='%s' $GITHUB_SHA || echo '')"
-          latest_tag="${{ steps.latest_by_date.outputs.tag }}"
-          # Resolve URLs; if tag created in this run use that tag, else use latest_by_date
-          # Prefer the tag we just created (next_rev) to avoid mismatch
-          created_tag="${{ steps.next_rev.outputs.tag }}"
-          chosen_tag="${created_tag:-$latest_tag}"
-          # Build clickable HTML pieces (Telegram supports basic HTML)
-          repo_html="<a href=\"${repo_url}\">${repo}</a>"
-          commit_url="${COMMIT_URL_PREFIX}/${sha_full}"
-          commit_html="<a href=\"${commit_url}\">${sha_short}</a>"
-          if [ -n "$chosen_tag" ]; then
-            tag_url="${TAG_URL_PREFIX}/${chosen_tag}"
-            tag_html="<a href=\"${tag_url}\">${chosen_tag}</a>"
-            tag_text="Rev: ${tag_html}"
-          else
-            tag_text="Rev: (none)"
-          fi
-          # Escape special HTML chars in author and commit_msg
-          esc_author=$(printf '%s' "$author" | sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g')
-          esc_msg=$(printf '%s' "$commit_msg" | sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g')
-          body="Repo: ${repo_html}%0ABranch: ${branch}%0ACommit: ${commit_html}%0AAuthor: ${esc_author}%0AMessage: ${esc_msg}%0A${tag_text}"
-          echo "body<<EOF" >> $GITHUB_OUTPUT
-          echo "${body}" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      - name: Preview Telegram message (log)
-        if: always()
-        run: |
-          # Show a human-readable preview (unescaped)
-          repo="${GITHUB_REPOSITORY}"
-          repo_url="${REPO_URL}"
-          branch="${GITHUB_REF#refs/heads/}"
-          sha_full="${GITHUB_SHA}"
-          sha_short="${sha_full::7}"
-          author="$(git --no-pager show -s --format='%an' $GITHUB_SHA || echo '')"
-          commit_msg="$(git --no-pager show -s --format='%s' $GITHUB_SHA || echo '')"
-          chosen_tag="${{ steps.next_rev.outputs.tag }}"
-          tag_display="${chosen_tag:-(none)}"
-          echo "---- Telegram message preview ----"
-          echo "Repo: ${repo} (${repo_url})"
-          echo "Branch: ${branch}"
-          echo "Commit: ${sha_short} (${COMMIT_URL_PREFIX}/${sha_full})"
-          echo "Author: ${author}"
-          echo "Message: ${commit_msg}"
-          echo "Rev: ${tag_display} (${TAG_URL_PREFIX}/${tag_display})"
-          echo "----------------------------------"
+          msg="$(git --no-pager show -s --format='%s' $GITHUB_SHA || echo '')"
+          latest_tag="${{ steps.latest_for_notify.outputs.tag }}"
+          tag_part="Rev: ${latest_tag:-(none)}"
+          body="Repo: ${repo}%0ABranch: ${branch}%0ACommit: ${sha}%0AAuthor: ${author}%0AMessage: ${msg}%0A${tag_part}"
+          echo "::set-output name=body::$body"
 
       - name: Send Telegram notification
         env:
@@ -154,7 +101,6 @@ jobs:
             exit 0
           fi
           body="${{ steps.message.outputs.body }}"
-          # Send message as HTML to enable clickable links
           curl -sS --fail -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
             -d "chat_id=${TELEGRAM_CHAT_ID}" \
             -d "text=${body}" \
